style.css
@font-face {
  font-family: "IBM VGA";
  src: url('fonts/Px437_IBM_VGA_8x16.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

a {
  color: rgb(136, 35, 35);
  text-decoration:wavy;
  text-shadow:none;
}

a:hover{
  color: #cccccc;
  text-decoration:wavy;
  text-shadow:none;
}

body {
  background: #000000; /* Make it white if you need */
  color: #cccccc;
  text-shadow: 4px 4px 0 #882323;
  font-family: 'IBM VGA', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

h1 {
  padding: 20px;
}

p {
  display: flex;
  justify-content: center;
  align-items: center;
}

#gen_col {
  position: fixed;  
  top: 0;
  width: 100px;
  height: 1000px;
}

@media screen and (max-width: 600px) {
  #gen_col {
    display: none;
  }
}

#header {
  position: fixed;
  top: 0;
  width: 100%;
  height:60px;
  display: flex;
  z-index: 99;
  justify-content: center;
  align-items: center;
}

.header_buttom:hover {
  color: #882323;
  cursor: pointer;
  text-decoration:wavy;
  text-shadow:none;
}

#header_blank {
  width: 100%;
  height:120px;
}

#content_box {
  height:60px;
  margin: auto;
  border-style: solid;
  border-width: 3px;
  box-shadow: 4px 4px #882323;
  background-color: #000000;
  display: flex;
  justify-content:left;
  align-items: center;
}

.flex_display {
  display: flex;
}

#experience_block {
  padding-top: 80px;
}

#about_block {
  padding-top: 80px;
}

#about_text {
  text-align: center;
  padding-left: 20%;
  padding-right: 5%;
  width: 40%;
}

#conway {
  width: 20%;
  height: 20%;
  rotate: 90deg;
}

#exp_symbol {
  max-width:100%;
  max-height: 100%;
}

#contact_block {
  padding-top: 80px;
}

.center {
  text-align: center;
}

.side_side {
  display: flex;
  width: 100%;
}

.left-50 {
  text-align: center;
  width: 50%;
}

.left-20 {
  text-align: right;
  width: 20%;
}

.left-70 {
  flex-direction: column;
  text-align: center;
  width: 60%;
}

.right-50 {
  text-align: center;
  width: 50%;
}

.right-20 {
  text-align: left;
  width: 20%;
}

.right-70 {
  flex-direction: column;
  text-align: center;
  width: 70%;
}

.padding {
  width: 10%;
}

.little-padding {
  width: 1%;
}

.up-padding {
  height: 10%;
}

.exp-title {
  width: 80%;
}
.exp-body {
  max-width: 80%;
}

